--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -1,3 +1,10 @@
+.perfil {
+	width: 100%;
+	height: 100%;
+	margin: 40px 0px 40px 100px;
+	justify-content: center;
+}
+
 
 .container {
 	display: grid;
@@ -5,6 +12,7 @@
 	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 	gap: 20px;
 	margin: 0px 20px 20px 20px;
+	
 }
 
 .card {
@@ -41,9 +49,11 @@
 }
 
 .card img {
-	width: 100%;
-	height: 100%;
+	width: 50%;
+	height: 50%;
 	border-radius: 30px;
+	
+	
 }
 
 .card .card_title {
